# code_saturne

./: .clang-format  .gitignore  AUTHORS  COMPATIBILITY  CONTRIBUTING.md  ChangeLog  ChangeLog.2007  ChangeLog.2008  ChangeLog.2009  ChangeLog.2010  ChangeLog.2011  ChangeLog.2012  ChangeLog.2013  Changelog  INSTALL.md  Makefile.am  NEWS  NEWS.md  QUALITY_ASSURANCE  README  README.md  TODO  configure.ac  install_saturne.py
V2_1_0-rc2/tests/: Makefile.am  bft_backtrace_test.c  bft_error_test.c  bft_mem_test.c  bft_mem_usage_test.c  bft_printf_test.c  bft_test.c  fvm_sizes_test.c  mei_test_graph.c
build-aux/catalyst/: CMakeLists.txt
doc/: Makefile.am
doc/HOWTO/: Makefile
doc/THEORY/: Makefile
doc/TUTORIAL/: Makefile
doc/USER/: Makefile  readme
doc/UTILISATION/: Makefile
doc/autovnv/: Makefile.am  autovnv.tex
doc/developer/: Makefile.am  developer.tex
doc/developper/: Makefile.am  Makefile.in  coding_standards.tex  common_constructs.tex  developper.tex  write_theory.tex
doc/doxygen/: Doxyfile  Makefile.am  Makefile.in  mainpage.dox  mainpage.h
doc/howto/: Makefile.am  howto.tex
doc/install/: Makefile.am  install.tex
doc/manpages/: code_saturne.1  cs.1  cs_check_consistency.1  cs_check_mesh.1  cs_check_syntax.1  cs_compile.1  cs_config.1  cs_create.1  cs_info.1  cs_io_dump.1  cs_partition.1  cs_plot_probes.1  cs_preprocess.1  cs_solver.1  ple-config.1
doc/refcard/: Makefile.am  refcard.tex
doc/salome/: Makefile.am  conf.py  index.rst
doc/style/: csdoc.sty  csmacros.sty  csshortdoc.cls  csvers.tex.in
doc/theory/: Makefile.am  algebr.tex  apintr.tex  biblio.tex  bilsc2.tex  cfbase.tex  cfener.tex  cfmsvl.tex  cfqdmv.tex  cfxtcl.tex  clptrg.tex  clptur.tex  clsyvt.tex  codits.tex  combbase.tex  combcharb.tex  combfuel.tex  combgaz.tex  combglb.tex  comprs.tex  condli.tex  covofi.tex  elbase.tex  goveqn.tex  gradmc.tex  gradrc.tex  inimas.tex  introd.tex  introd_fonc.tex.last  itrmas.tex  matrix.tex  mesh_algo.tex  navsto.tex  preduv.tex  recvmc.tex  resolp.tex  spadis.tex  summary.tex  theory.tex  thermo.tex  (+7 more)
doc/tutorial/: Makefile.am  case1.tex  case2.tex  case3.tex  case4.tex  case5.tex  intro.tex  tuto_case1.tex  tuto_case2.tex  tuto_case3.tex  tuto_case4.tex  tuto_case5.tex  tutorial.tex
doc/user/: Makefile.am  a1_autovalid.tex  biblio.tex  saturne1.tex  saturne2.tex  summary.tex  user.tex
docs/: Makefile.am
docs/autovnv/: Makefile.am  autovnv.tex
docs/developer/: Makefile.am  coding_standards.tex  common_constructs.tex  developer.tex  write_theory.tex
docs/developper/: Makefile.am  coding_standards.tex  common_constructs.tex  developper.tex  write_theory.tex
docs/doxygen/: Doxyfile-pre  Doxyfile-src  Doxyfile-ui  DoxygenLayout.xml  Makefile.am  cs_dox_header.html  cs_dox_style.css  cs_external_links.dox  cs_math_macros.tex  cs_mathjax_macros.js  doxypy.py  doxypypy.py  field_names.h  function_defaults.h  keywords.h  mainpage.dox  mainpage.h
docs/install/: Makefile.am  install.tex
docs/manpages/: code_saturne.1
docs/refcard/: Makefile.am  refcard.tex
docs/salome/: Makefile.am  tutorials.rst
docs/studymanager/: Makefile.am  studymanager.tex
docs/style/: csbiblio.bib  csdoc.cls  csdoc.sty  csindex.sty  csmacros.sty  csshortdoc.cls  csvers.tex.in  nomencl.cfg
docs/theory/: Makefile.am  algebr.tex  apintr.tex  atmo.tex  biblio.tex  bilsc2.tex  bndcnd.tex  cavitation.tex  cfbase.tex  cfener.tex  cfmsvl.tex  cfqdmv.tex  cfxtcl.tex  clptrg.tex  clptur.tex  clsyvt.tex  codits.tex  combbase.tex  combgaz.tex  combglb.tex  combustion_coal.tex  combustion_gas.tex  combustion_intro.tex  combustion_thermo.tex  comprs.tex  condli.tex  covofi.tex  cs_balance.tex  cs_boundary_conditions.tex  cs_boundary_conditions_set_coeffs_turb.tex  cs_equation_iterative_solve.tex  cs_face_orthotropic_viscosity_vector.tex  cs_face_viscosity.tex  cs_mass_flux.tex  cs_pressure_correction.tex  cs_solve_equation.tex  cs_solve_navier_stokes.tex  cs_turbulence_ke.tex  cs_turbulence_rij.tex  cs_velocity_prediction.tex  (+34 more)
docs/tutorial/: Makefile.am  case1.tex  case2.tex  case3.tex  case4.tex  case5.tex  case6.tex  intro.tex  tuto_case1.tex  tuto_case2.tex  tuto_case3.tex  tuto_case4.tex  tuto_case5.tex  tuto_case6.tex  tutorial.tex
docs/user/: Makefile.am  biblio.tex  saturne1.tex  saturne2.tex  summary.tex  user.tex
gui/Base/: BrowserView.py  CommandLine.py  CommandMgrDialogForm.ui  CommandMgrDialogView.py  Common.py  CompletionTextEditor.py  IdForm.ui  IdView.py  MainForm.ui  MainView.py  Makefile.am  NewCaseDialogForm.ui  QCouplingEditorView.py  QFileEditor.py  QtCase.py  QtCore.py  QtGui.py  QtPage.py  QtWidgets.py  Toolbox.py  XMLengine.py  XMLinitialize.py  XMLinitializeNeptune.py  XMLmodel.py  XMLmodelNeptune.py  XMLvariables.py  XMLvariablesNeptune.py  __init__.py  resource_base.qrc  resource_base_rc.py
gui/Pages/: AnalysisFeaturesForm.ui  (+373 more)
libple/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NEWS.md  README  README.md  configure.ac
libsyrcs/: Makefile.am  syr_comm.c  syr_comm.h  syr_coupling.c  syr_coupling.h  syr_cs.c  syr_defs.c  syr_defs.h
python/: Makefile.am  setup.py
salome/: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  cs_headers.h  ple_config_defs.h  ple_coupling.c  ple_coupling.h  ple_defs.h  ple_locator.c  ple_locator.h
tests/: Makefile.am  Makefile.in  bft_backtrace_test.c  bft_backtrace_test.cpp  bft_error_test.c  bft_error_test.cpp  bft_mem_test.c  bft_mem_test.cpp  bft_mem_usage_test.c  bft_mem_usage_test.cpp  bft_printf_test.c  bft_printf_test.cpp  bft_test.c  cfd_proxy_unit_test.c  cs_all_to_all_test.c  cs_all_to_all_test.cpp  cs_blas_test.c  cs_blas_test.cpp  cs_check_cdo.c  cs_check_cdo.cpp  cs_check_quadrature.c  cs_check_quadrature.cpp  cs_check_sdm.c  cs_check_sdm.cpp  cs_core_test.c  cs_core_test.cpp  cs_dispatch_queue_test.cpp  cs_dispatch_test.cpp  cs_dispatch_test.cxx  cs_dispatch_test_cuda.cu  cs_file_test.c  cs_file_test.cpp  cs_geom_test.c  cs_geom_test.cpp  cs_gpu_cuda_test.cu  cs_gpu_hip_test.cpp  cs_gpu_test.c  cs_gpu_test.cpp  cs_gpu_test.cxx  cs_interface_test.c  (+27 more)
(+14354 files in other folders)
